--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.6.23",
+    "font-awesome": "^4.6.3",
+    "primeng": "^1.0.0-beta.16"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.1.0",
