--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser": "^2.1.0",
     "@angular/platform-browser-dynamic": "^2.1.0",
     "@angular/router": "^3.1.0",
+    "angularfire2": "^2.0.0-beta.6",
     "core-js": "^2.4.1",
+    "firebase": "^3.6.3",
+    "font-awesome": "^4.6.3",
+    "primeng": "^1.0.0-beta.16",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23",
-    "font-awesome": "^4.6.3",
-    "primeng": "^1.0.0-beta.16"
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.1.0",
