--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^2.1.0",
     "@angular/platform-browser-dynamic": "^2.1.0",
     "@angular/router": "^3.1.0",
+    "angular2-jwt": "^0.1.26",
     "angularfire2": "^2.0.0-beta.6",
+    "auth0-lock": "^10.7.2",
     "core-js": "^2.4.1",
     "firebase": "^3.6.3",
     "font-awesome": "^4.6.3",
